# renderer

./: .gitignore  CMakeLists.txt  README.md  renderer.slnx
.github/: copilot-instructions.md
include/: buffer.h  buffer_formatter.h  console.h  draw.h
renderer/: buffer.cpp  buffer.h  buffer_formatter.h  draw.cpp  draw.h  main.cpp  renderer.vcxproj  renderer.vcxproj.filters
src/: buffer.cpp  console.cpp  draw.cpp  main.cpp
